[gd_scene load_steps=3 format=3 uid="uid://4kpyknr3hhwi"]

[ext_resource type="Script" uid="uid://cwujefri3b1vh" path="res://scripts/ShipyardUI.gd" id="1_sfsmb"]
[ext_resource type="StyleBox" uid="uid://bwupa2pkqwuwy" path="res://styles/PlanetLandingUI.tres" id="2_7i52r"]

[node name="ShipyardUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sfsmb")

[node name="Background" type="ColorRect" parent="."]
modulate = Color(0, 0, 0, 0.8)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftPanel" type="Panel" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("2_7i52r")

[node name="ShipListContainer" type="VBoxContainer" parent="MainContainer/LeftPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="HeaderLabel" type="Label" parent="MainContainer/LeftPanel/ShipListContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Available Ships"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer/LeftPanel/ShipListContainer"]
clip_contents = false
layout_mode = 2
size_flags_vertical = 3

[node name="ShipList" type="VBoxContainer" parent="MainContainer/LeftPanel/ShipListContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="CenterPanel" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="ShipImagePanel" type="Panel" parent="MainContainer/CenterPanel"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
theme_override_styles/panel = ExtResource("2_7i52r")

[node name="ShipImage" type="TextureRect" parent="MainContainer/CenterPanel/ShipImagePanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 5

[node name="ButtonPanel" type="Panel" parent="MainContainer/CenterPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("2_7i52r")

[node name="ButtonContainer" type="VBoxContainer" parent="MainContainer/CenterPanel/ButtonPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="PurchaseButton" type="Button" parent="MainContainer/CenterPanel/ButtonPanel/ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 20
disabled = true
text = "Purchase Ship"

[node name="BackButton" type="Button" parent="MainContainer/CenterPanel/ButtonPanel/ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Back to Planet"

[node name="RightPanel" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="ShipDetailsPanel" type="Panel" parent="MainContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("2_7i52r")

[node name="ShipDetailsContainer" type="VBoxContainer" parent="MainContainer/RightPanel/ShipDetailsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="ShipNameLabel" type="Label" parent="MainContainer/RightPanel/ShipDetailsPanel/ShipDetailsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="ShipStatsLabel" type="Label" parent="MainContainer/RightPanel/ShipDetailsPanel/ShipDetailsContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 16
autowrap_mode = 3
